Changelog file for omnibook package:
------------------------------------

2.XXXXXXXXX

2.200608017 Mathieu Bérard <math_b@users.sourceforge.net>
* Fix bug un omnibook_io_match
* Fix DMI handling behaviour: we stop on the FIRST matched
  DMI entry. This is restoring pre-20060806 behaviour.
  Invert M40 vs. M40X entry position.

2.20060816 Mathieu Bérard <math_b@users.sourceforge.net>
* Merge from the new-backend branch: Add new backend code 
  (in compal.c) used with TSM30X class laptops:
  Used for lcd access
  Used for hotkeys support: now most Fn+key generate a scancode,
  as well as the wifi kill switch.
  Warning: tested only on TSM40X an TSM70 laptops.
* Create omnibook_io_operation struct and omnibook_io_{read/write}
  funtions to simplify implementation of some simple features.
  Used with ac display dock and led features.
* Rename onetouch feature to "hotkeys" which is a vendor neutral name.
* Add dmi info for Toshiba Satellite M100 (Thanks Sertaç Ö. Yıldız)
  And fix it
* Add dmi info for Toshiba Satellite A105 (Thanks Mikkel L. Ellertson)
  the support is pretty minimalistic (LCD brigtness only) this
  also ingurate ectype 14
* Cleanup/Fix in Makefile
  Include explicit depmod in the 'load' target
* Improvements in the Debian packages by Julien Valroff
* Fix backlight support conditional compilation
* Fix Toshiba Satellite M40X detection string

2.20060809 Mathieu Bérard <math_b@users.sourceforge.net>
* Add dmi info for Toshiba Satellite M40X (Thanks Julien Valroff) 
* Fix two brown paper bag bugs in Debian/Ubuntu support 

2.20060806 Mathieu Bérard <math_b@users.sourceforge.net>
* Make the module linux 2.6 only
  Kernel versions from 2.6.8 to a least 2.6.17 are supported
  Code for compatibility with kernels older than 2.6.17 is 
  mostly implemented in compat.h
* Integrate with Driver Model:
  register as a platform device and optional
  registration as a backlight device (2.6.17+ required here)
* Get rid of deprecated pm_legacy functions